fixed type spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,12 @@
 @import "tailwindcss";
 
 .photo-border {
-    border: 4px solid; /*#4f46e5 Indigo-600 */
+    border: 3px solid; /*#4f46e5 Indigo-600 */
 }
 
 .typed-cursor {
   font-size: inherit;
   font-weight: bold;
   vertical-align: top;
-  transform: scaleY(1.2);        /* Make the pipe taller */
   display: inline-block; /* Ensure it behaves like text */
 }
